--- a/unit_1/HTML/index.html
+++ b/unit_1/HTML/index.html
@@ -2,22 +2,12 @@
 <html>
 
 	<head>
-		<title>Dress Yourself</title>
+		<title>Dress Me</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 
 	<body>
-		<h1>Dress Yourself</h1>
-
+		<h1>Dress Me</h1>
 		<p>This is a website designed so that you can style yourself</p>
-
-		<a href="http://scapewallpaper.com/walkin-closet-balcony/">
-
-		<p>This is a site that I've just recently thought of creating. I love clothes and fashions and dressing in different styles; sometimes it gets bothersome trying on and taking off different articles of clot\hing when inventing new outfits. Thats when i thought what better idea than to dress yourself virtually.</p>
-
-		<ul>virtual walkin closet, 3d model of yourself, ability to upload clothing, makeup and hairstyle upload</ul>
-
-		<p>Contact me: nikkiwynter94@gmail.com</p>
-
 	</body>
 	
