--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -12,12 +12,13 @@
 
 	   <p id="slogan"> Step into the future with Dress Yourself</p>
 
-	   <p>Mission:vfashion. It can get bothersome when trying on different styles and articles of clothing. So I thought why not dress yourself virtually</p>
+	   <p>I love fashions and trying on different articles of clothing but sometimes it is bothersome to change so often. So I thought why not dress yourself virtually?</p>
 
 	   <p>
 		 <li>A virtual walk-in closet</li>
 		 <li>Ability to upload clothing</li>
 		 <li>Makeup and hairstyle upload</li>
+		 <li>Virtual customer doll</li>
 	   </p>
 
 	    <a href="mailto:nikkiwynter94@gmail.com">Contact me: nikkiwynter94@gmail.com</a>
