--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -18,19 +18,26 @@
 		 <li>home</li>
 		 <li>about us</li>
 		 <li>partners</li>
+		 <li>closet</li>
 		</ul>
 		</nav>
-			<p id="slogan"> Step into the future with Dress Yourself</p>
 
+		<section>
+			<article>
+			<p id="slogan"> Step into the future with Dress Yourself</p>
+			</article>
+			<aside>
 			<p id ="mission"> I love fashions and trying on different articles of clothing but sometimes it is bothersome to change so often. So I thought why not dress myself virtually?</p>
-	   
+	   		</aside>
+	   		<aside>
 			<ul>
 			 <li>A virtual walk-in closet</li>
 			 <li>Ability to upload clothing</li>
 			 <li>Makeup and hairstyle upload</li>
 			 <li>Virtual customer doll</li>
 			</ul>
-		
+			</aside>
+		</section>
 		<footer>
 			<p> 
 			<a href="mailto:nikkiwynter94@gmail.com">Contact me: nikkiwynter94@gmail.com</a>
